# osu-tools-py

./: .gitignore  .gitmodules  main.py  pyproject.toml  test.osu  test.py  test2.osu
.github/workflows/: build.yml
src/osu_lib/: calculator.py
src/osu_tools/: calculator.py
