[project]
name = "osu-tools-py"
version = "0.1.3"
description = "A Python wrapper for osu! tools using pythonnet"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pythonnet>=3.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/osu_tools"]

[tool.hatch.build]
artifacts = [
    "src/osu_tools/lib/**/*"
]
